set(ICON_FILES
status/16/dialog-information.svg
status/48/media-playlist-shuffle.svg
status/48/dialog-information.svg
status/128/dialog-information.svg
status/24/media-playlist-shuffle.svg
status/24/dialog-information.svg
status/32/dialog-information.svg
status/64/dialog-information.svg
status/22/dialog-information.svg
devices/16/drive-harddisk.svg
devices/16/media-optical.svg
devices/16/media-optical-cd.svg
devices/16/audio-speakers.png
devices/48/drive-harddisk.svg
devices/48/media-optical.svg
devices/48/media-optical-cd.svg
devices/48/audio-speakers.png
devices/128/drive-harddisk.svg
devices/128/media-optical.svg
devices/128/media-optical-cd.svg
devices/24/drive-harddisk.svg
devices/24/media-optical.svg
devices/24/media-optical-cd.svg
devices/24/audio-speakers.png
devices/32/drive-harddisk.svg
devices/32/media-optical.svg
devices/32/media-optical-cd.svg
devices/32/audio-speakers.png
devices/64/drive-harddisk.svg
devices/64/media-optical.svg
devices/64/media-optical-cd.svg
devices/22/drive-harddisk.svg
devices/22/media-optical.svg
devices/22/media-optical-cd.svg
devices/22/audio-speakers.png
places/16/folder-documents.svg
places/16/folder-templates.svg
places/16/folder-publicshare.svg
places/16/inode-directory.svg
places/16/folder-download.svg
places/16/folder.svg
places/16/user-desktop.svg
places/16/folder-downloads.svg
places/16/folder-music.svg
places/48/folder-documents.svg
places/48/folder-templates.svg
places/48/folder-publicshare.svg
places/48/inode-directory.svg
places/48/folder-download.svg
places/48/folder.svg
places/48/user-desktop.svg
places/48/folder-downloads.svg
places/48/folder-music.svg
places/128/user-desktop.svg
places/24/folder-documents.svg
places/24/folder-templates.svg
places/24/folder-publicshare.svg
places/24/inode-directory.svg
places/24/folder-download.svg
places/24/folder.svg
places/24/user-desktop.svg
places/24/folder-downloads.svg
places/24/folder-music.svg
places/32/folder-documents.svg
places/32/folder-templates.svg
places/32/folder-publicshare.svg
places/32/inode-directory.svg
places/32/folder-download.svg
places/32/folder.svg
places/32/user-desktop.svg
places/32/folder-downloads.svg
places/32/folder-music.svg
places/64/folder-documents.svg
places/64/folder-templates.svg
places/64/folder-publicshare.svg
places/64/inode-directory.svg
places/64/folder-download.svg
places/64/folder.svg
places/64/user-desktop.svg
places/64/folder-downloads.svg
places/64/folder-music.svg
places/22/folder-documents.svg
places/22/folder-templates.svg
places/22/folder-publicshare.svg
places/22/inode-directory.svg
places/22/folder-download.svg
places/22/folder.svg
places/22/user-desktop.svg
places/22/folder-downloads.svg
places/22/folder-music.svg
actions/16/go-down.svg
actions/16/gtk-edit.svg
actions/16/edit-clear.svg
actions/16/go-previous.svg
actions/16/go-up.svg
actions/16/document-open.svg
actions/16/edit-find.png
actions/16/document-new.svg
actions/16/go-next.svg
actions/48/go-down.svg
actions/48/gtk-edit.svg
actions/48/edit-clear.svg
actions/48/gtk-execute.svg
actions/48/document-open-recent.svg
actions/48/go-previous.svg
actions/48/go-up.svg
actions/48/document-open.svg
actions/48/edit-find.png
actions/48/document-new.svg
actions/48/go-next.svg
actions/128/document-new.svg
actions/24/go-down.svg
actions/24/gtk-edit.svg
actions/24/edit-clear.svg
actions/24/gtk-execute.svg
actions/24/document-open-recent.svg
actions/24/go-previous.svg
actions/24/go-up.svg
actions/24/document-open.svg
actions/24/edit-find.png
actions/24/document-new.svg
actions/24/go-next.svg
actions/32/edit-find.png
actions/32/document-new.svg
actions/64/document-new.svg
actions/22/go-down.svg
actions/22/gtk-edit.svg
actions/22/document-open-recent.svg
actions/22/go-previous.svg
actions/22/go-up.svg
actions/22/edit-find.png
actions/22/document-new.svg
actions/22/go-next.svg
categories/48/preferences-other.svg
categories/24/preferences-other.svg
categories/64/preferences-other.svg
mimes/16/image-png.svg
mimes/16/audio-x-mp3-playlist.svg
mimes/16/audio-x-generic.svg
mimes/48/image-png.svg
mimes/48/audio-x-mp3-playlist.svg
mimes/48/audio-x-generic.svg
mimes/24/image-png.svg
mimes/24/audio-x-mp3-playlist.svg
mimes/24/audio-x-generic.svg
mimes/22/image-png.svg
mimes/22/audio-x-mp3-playlist.svg
mimes/22/audio-x-generic.svg
apps/16/preferences-desktop-keyboard.svg
apps/48/preferences-desktop-keyboard.svg
apps/24/preferences-desktop-keyboard.svg
)

foreach(ICON ${ICON_FILES})
    get_filename_component(ICON_PATH ${ICON} PATH)
    install(FILES ${CANTATA_ICONS_DIR}/${ICON} DESTINATION ${CANTATA_ICON_INSTALL_PREFIX}/${ICON_PATH})
endforeach(ICON ${ICON_FILES})
install(FILES gnome.copyright Humanity.copyright index.theme README DESTINATION ${CANTATA_ICON_INSTALL_PREFIX})
